Partial_14Dec2021/force-app/main/default/objects/Bandhan_Orders__c/Bandhan_Orders__c.object-meta.xml
<CustomObject>
    <description>For  the Account with Bandhan checked. And in order to show product names as column name, fields are created with product name</description>
    <label>Bandhan Order</label>
    <nameField>
        <displayFormat>BO - {000000}</displayFormat>
        <label>Bandhan Orders Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bandhan Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>