Partial_14Dec2021/force-app/main/default/objects/Bandhan_Orders__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Related Account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bandhan Orders</relationshipLabel>
    <relationshipName>Bandhan_Orders</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>