Partial_14Dec2021/force-app/main/default/objects/Bandhan_Orders__c/fields/Agriculture_Total_Value__c.field-meta.xml
<CustomField>
    <fullName>Agriculture_Total_Value__c</fullName>
    <formula>Column_Pipe__c  +  V4__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agriculture Total Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>