Partial_14Dec2021/force-app/main/default/objects/Bandhan_Orders__c/fields/Air_Admittance_Valve__c.field-meta.xml
<CustomField>
    <fullName>Air_Admittance_Valve__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Air Admittance Valve</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>