Partial_14Dec2021/force-app/main/default/objects/Bandhan_Orders__c/fields/Aqualife__c.field-meta.xml
<CustomField>
    <fullName>Aqualife__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Aqualife</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>