Partial_14Dec2021/force-app/main/default/objects/Bandhan_Orders__c/fields/BDM_Support__c.field-meta.xml
<CustomField>
    <fullName>BDM_Support__c</fullName>
    <label>BDM Support</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>RNR</fullName>
            </value>
            <value>
                <fullName>BDM  NOT VISITED</fullName>
            </value>
            <value>
                <fullName>NOT CONDUCTED ACTIVITY</fullName>
            </value>
            <value>
                <fullName>NOT RECEIVED SCHEMES &amp; GIFTS</fullName>
            </value>
            <value>
                <fullName>ACTIVITY CONDUCTED AMOUNT( CLAIMNG LATE)</fullName>
            </value>
            <value>
                <fullName>INTERESTED BUT NOT VISITED BY OUR BDM</fullName>
            </value>
            <value>
                <fullName>INACTIVE/WRONG NUMBER</fullName>
            </value>
            <value>
                <fullName>NOT DEALING WITH ASHIRVAD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>