Partial_14Dec2021/force-app/main/default/objects/Bandhan_Orders__c/fields/Branding__c.field-meta.xml
<CustomField>
    <fullName>Branding__c</fullName>
    <label>Branding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>RNR/busy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>