Partial_14Dec2021/force-app/main/default/objects/Bandhan_Orders__c/fields/Cart_Status__c.field-meta.xml
<CustomField>
    <fullName>Cart_Status__c</fullName>
    <label>Cart Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Order Given</fullName>
            </value>
            <value>
                <fullName>No order given</fullName>
            </value>
            <value>
                <fullName>Call later</fullName>
            </value>
            <value>
                <fullName>Invalid/Wrong Number</fullName>
            </value>
            <value>
                <fullName>RNR/Busy/Call Divert</fullName>
            </value>
            <value>
                <fullName>Not dealing with ashirvad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>