Partial_14Dec2021/force-app/main/default/objects/Bandhan_Orders__c/fields/Column_Pipe__c.field-meta.xml
<CustomField>
    <fullName>Column_Pipe__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Column Pipe</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>