Partial_14Dec2021/force-app/main/default/objects/Bandhan_Orders__c/fields/Complaints__c.field-meta.xml
<CustomField>
    <fullName>Complaints__c</fullName>
    <label>Complaints</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wrong/Invalid Number</fullName>
            </value>
            <value>
                <fullName>Not Attended</fullName>
            </value>
            <value>
                <fullName>BDM Response Poor</fullName>
            </value>
            <value>
                <fullName>Supply not in Time</fullName>
            </value>
            <value>
                <fullName>Service Poor</fullName>
            </value>
            <value>
                <fullName>Technical Issues</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No complaints</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>