Partial_14Dec2021/force-app/main/default/objects/Bandhan_Orders__c/fields/Concealed_Valves__c.field-meta.xml
<CustomField>
    <fullName>Concealed_Valves__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Concealed Valves</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>