Partial_14Dec2021/force-app/main/default/objects/Bandhan_Orders__c/fields/Distributor_Support__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Support__c</fullName>
    <label>Distributor Support</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>RNR</fullName>
            </value>
            <value>
                <fullName>Credit note</fullName>
            </value>
            <value>
                <fullName>Schemes</fullName>
            </value>
            <value>
                <fullName>Delay in dispatch</fullName>
            </value>
            <value>
                <fullName>Price  issue</fullName>
            </value>
            <value>
                <fullName>DSM Support</fullName>
            </value>
            <value>
                <fullName>Product requirement</fullName>
            </value>
            <value>
                <fullName>Branding issue</fullName>
            </value>
            <value>
                <fullName>Lack of material shortage</fullName>
            </value>
            <value>
                <fullName>Product complaint</fullName>
            </value>
            <value>
                <fullName>Lack of activity</fullName>
            </value>
            <value>
                <fullName>Discount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>