Partial_14Dec2021/force-app/main/default/objects/Bandhan_Orders__c/fields/Fire_Collars__c.field-meta.xml
<CustomField>
    <fullName>Fire_Collars__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Fire Collars</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>