Partial_14Dec2021/force-app/main/default/objects/Bandhan_Orders__c/fields/Grease_Seperator__c.field-meta.xml
<CustomField>
    <fullName>Grease_Seperator__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Grease Seperator</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>