Partial_14Dec2021/force-app/main/default/objects/Bandhan_Orders__c/fields/IS_4985__c.field-meta.xml
<CustomField>
    <fullName>IS_4985__c</fullName>
    <defaultValue>0</defaultValue>
    <label>IS 4985</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>