Partial_14Dec2021/force-app/main/default/objects/Bandhan_Orders__c/fields/Month_of_CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>Month_of_CreatedDate__c</fullName>
    <formula>MONTH( DATEVALUE( CreatedDate ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month of CreatedDate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>