Partial_14Dec2021/force-app/main/default/objects/Bandhan_Orders__c/fields/New_Products_Total_Value__c.field-meta.xml
<CustomField>
    <fullName>New_Products_Total_Value__c</fullName>
    <formula>Air_Admittance_Valve__c  +  Ball_Valves__c  +  Butterfly_Valves__c  +  Concealed_Cisterns__c  +  Concealed_Valves__c  +  Fire_Collars__c  +  Grease_Seperator__c  +  IS_4985__c  +  Silent_Plus_SWR__c  +  Silent_SWR__c  +  Surface_Drainage__c  +  U_G_Drainage__c  +  Velocity_Breaker__c  +  Waste_Traps__c  +  WC_PAN_Connector__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Products Total Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>