Partial_14Dec2021/force-app/main/default/objects/Bandhan_Orders__c/fields/Order_created_time__c.field-meta.xml
<CustomField>
    <fullName>Order_created_time__c</fullName>
    <formula>CreatedDate</formula>
    <label>Order created time</label>
    <type>DateTime</type>
</CustomField>