Partial_14Dec2021/force-app/main/default/objects/Bandhan_Orders__c/fields/Plumbing_Total_Value__c.field-meta.xml
<CustomField>
    <fullName>Plumbing_Total_Value__c</fullName>
    <formula>Aqualife__c  +  CPVC__c  +  SWR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plumbing Total Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>