Partial_14Dec2021/force-app/main/default/objects/Bandhan_Orders__c/fields/Promotional_Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Promotional_Activity_Type__c</fullName>
    <label>Promotional Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Vertical_type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Promtional_Activity_Type</valueSetName>
    </valueSet>
</CustomField>