Partial_14Dec2021/force-app/main/default/objects/Bandhan_Orders__c/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <label>Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>