Partial_14Dec2021/force-app/main/default/objects/Bandhan_Orders__c/fields/Round__c.field-meta.xml
<CustomField>
    <fullName>Round__c</fullName>
    <description>Bandhan order round number</description>
    <inlineHelpText>Select Round</inlineHelpText>
    <label>Round</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Round1</fullName>
                <label>Round 1</label>
            </value>
            <value>
                <fullName>Round2</fullName>
                <label>Round 2</label>
            </value>
            <value>
                <fullName>Round3</fullName>
                <label>Round 3</label>
            </value>
            <value>
                <fullName>Round4</fullName>
                <label>Round 4</label>
            </value>
            <value>
                <fullName>Round5</fullName>
                <label>Round 5</label>
            </value>
            <value>
                <fullName>Round6</fullName>
                <label>Round 6</label>
            </value>
            <value>
                <fullName>Round7</fullName>
                <label>Round 7</label>
            </value>
            <value>
                <fullName>Round8</fullName>
                <label>Round 8</label>
            </value>
            <value>
                <fullName>Round9</fullName>
                <label>Round 9</label>
            </value>
            <value>
                <fullName>Round10</fullName>
                <label>Round 10</label>
            </value>
            <value>
                <fullName>Round 11</fullName>
            </value>
            <value>
                <fullName>Round 12</fullName>
            </value>
            <value>
                <fullName>Round 13</fullName>
            </value>
            <value>
                <fullName>Round 14</fullName>
            </value>
            <value>
                <fullName>Round 15</fullName>
            </value>
            <value>
                <fullName>Round  16</fullName>
            </value>
            <value>
                <fullName>D_E</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>