Partial_14Dec2021/force-app/main/default/objects/Bandhan_Orders__c/fields/Silent_SWR__c.field-meta.xml
<CustomField>
    <fullName>Silent_SWR__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Silent SWR</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>