Partial_14Dec2021/force-app/main/default/objects/Bandhan_Orders__c/fields/Suggestions__c.field-meta.xml
<CustomField>
    <fullName>Suggestions__c</fullName>
    <label>Suggestions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Existing Product</fullName>
            </value>
            <value>
                <fullName>New Product</fullName>
            </value>
            <value>
                <fullName>Promotional Activity</fullName>
            </value>
            <value>
                <fullName>Gift Request</fullName>
            </value>
            <value>
                <fullName>Solvent Cement</fullName>
            </value>
            <value>
                <fullName>Direct Dealership</fullName>
            </value>
            <value>
                <fullName>Distributorship</fullName>
            </value>
            <value>
                <fullName>Dealership</fullName>
            </value>
            <value>
                <fullName>Branding</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No suggestions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>