Partial_14Dec2021/force-app/main/default/objects/Bandhan_Orders__c/fields/Surface_Drainage__c.field-meta.xml
<CustomField>
    <fullName>Surface_Drainage__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Surface Drainage</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>