Partial_14Dec2021/force-app/main/default/objects/Bandhan_Orders__c/fields/Total_Order_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Order_Value__c</fullName>
    <formula>Agriculture_Total_Value__c  +  Plumbing_Total_Value__c  +  New_Products_Total_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Order Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>