Partial_14Dec2021/force-app/main/default/objects/Bandhan_Orders__c/fields/U_G_Drainage__c.field-meta.xml
<CustomField>
    <fullName>U_G_Drainage__c</fullName>
    <defaultValue>0</defaultValue>
    <label>U/G Drainage</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>