Partial_14Dec2021/force-app/main/default/objects/Bandhan_Orders__c/fields/V4__c.field-meta.xml
<CustomField>
    <fullName>V4__c</fullName>
    <defaultValue>0</defaultValue>
    <label>V4</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>