Partial_14Dec2021/force-app/main/default/objects/Bandhan_Orders__c/fields/Velocity_Breaker__c.field-meta.xml
<CustomField>
    <fullName>Velocity_Breaker__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Velocity Breaker</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>