Partial_14Dec2021/force-app/main/default/objects/Bandhan_Orders__c/fields/Vertical_type__c.field-meta.xml
<CustomField>
    <fullName>Vertical_type__c</fullName>
    <label>Vertical type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Vertical_Type</valueSetName>
    </valueSet>
</CustomField>