Partial_14Dec2021/force-app/main/default/objects/Bandhan_Orders__c/fields/Waste_Traps__c.field-meta.xml
<CustomField>
    <fullName>Waste_Traps__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Waste &amp; Traps</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>