Partial_14Dec2021/force-app/main/default/objects/Bandhan_Orders__c/fields/WC_PAN_Connector__c.field-meta.xml
<CustomField>
    <fullName>WC_PAN_Connector__c</fullName>
    <defaultValue>0</defaultValue>
    <label>WC PAN Connector</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>