Partial_14Dec2021/force-app/main/default/objects/Bandhan_Orders__c/fields/Year_of_CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>Year_of_CreatedDate__c</fullName>
    <formula>YEAR( DATEVALUE( CreatedDate ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year of CreatedDate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>