Partial_14Dec2021/force-app/main/default/objects/Bandhan_Orders__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Order_Date__c</columns>
    <columns>Call_Center_Person_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>